fix awful highlight from overflow scroll

--- a/styles/syntax.css
+++ b/styles/syntax.css
@@ -165,7 +165,6 @@
   color: #ffffff;
   background-color: #212121;
   padding: 10px;
-  overflow: scroll;
 }
 .highlight .n, .highlight .py, .highlight .nx {
   color: #ffffff;
